--- a/benchmark-graph.html
+++ b/benchmark-graph.html
@@ -8,13 +8,13 @@
 </head>
 
 <body><div class="container">
-    <div class="item" id="AoBdJCWKvNQO" style="width:900px;height:500px;"></div>
+    <div class="item" id="DwUNiMtTglGD" style="width:900px;height:500px;"></div>
 </div><script type="text/javascript">
     "use strict";
-    let goecharts_AoBdJCWKvNQO = echarts.init(document.getElementById('AoBdJCWKvNQO'), "white", { renderer: "canvas" });
-    let option_AoBdJCWKvNQO = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true},"series":[{"name":"allocs/op","type":"line","data":[{"value":0},{"value":99},{"value":0},{"value":18}]},{"name":"ns/op","type":"line","data":[{"value":629.9},{"value":5919},{"value":732.3},{"value":1991}]},{"name":"B/op","type":"line","data":[{"value":0},{"value":21080},{"value":0},{"value":5747}]}],"title":{"text":"Benchmark Results"},"toolbox":{},"tooltip":{"show":true,"trigger":"axis"},"xAxis":[{"data":["Benchmark 1","Benchmark 2","Benchmark 3","Benchmark 4"]}],"yAxis":[{}]}
+    let goecharts_DwUNiMtTglGD = echarts.init(document.getElementById('DwUNiMtTglGD'), "white", { renderer: "canvas" });
+    let option_DwUNiMtTglGD = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true},"series":[{"name":"ns/op","type":"line","data":[{"value":544.7},{"value":9766},{"value":619.1},{"value":3351}]},{"name":"B/op","type":"line","data":[{"value":0},{"value":21080},{"value":0},{"value":6139}]},{"name":"allocs/op","type":"line","data":[{"value":0},{"value":99},{"value":0},{"value":19}]}],"title":{"text":"Benchmark Results"},"toolbox":{},"tooltip":{"show":true,"trigger":"axis"},"xAxis":[{"data":["Benchmark 1","Benchmark 2","Benchmark 3","Benchmark 4"]}],"yAxis":[{}]}
 
-    goecharts_AoBdJCWKvNQO.setOption(option_AoBdJCWKvNQO);
+    goecharts_DwUNiMtTglGD.setOption(option_DwUNiMtTglGD);
 </script>
 <style>
     .container {margin-top:30px; display: flex;justify-content: center;align-items: center;}
