feat: embed interactive graphs directly in README
✅ Added Mermaid chart rendering (GitHub native support)
✅ Added text-based performance bars with Unicode characters
✅ Both charts now display directly in README without external files
✅ Mermaid shows line graph of ns/op performance
✅ Text chart shows detailed breakdown of ns/op, B/op, and allocs/op

The README now displays:
📊 Benchmark results table
📈 Interactive Mermaid chart (renders on GitHub)
📊 Visual performance bars with actual values
🕒 Timestamp of last update

No more external file dependencies for viewing graphs!

--- a/benchmark-graph.html
+++ b/benchmark-graph.html
@@ -8,13 +8,13 @@
 </head>
 
 <body><div class="container">
-    <div class="item" id="asGgqCmTOpgR" style="width:900px;height:500px;"></div>
+    <div class="item" id="TKLzdWaEfOmY" style="width:900px;height:500px;"></div>
 </div><script type="text/javascript">
     "use strict";
-    let goecharts_asGgqCmTOpgR = echarts.init(document.getElementById('asGgqCmTOpgR'), "white", { renderer: "canvas" });
-    let option_asGgqCmTOpgR = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true},"series":[{"name":"B/op","type":"line","data":[{"value":0},{"value":21080},{"value":0},{"value":5747}]},{"name":"allocs/op","type":"line","data":[{"value":0},{"value":99},{"value":0},{"value":18}]},{"name":"ns/op","type":"line","data":[{"value":628},{"value":5944},{"value":733.7},{"value":1958}]}],"title":{"text":"Benchmark Results"},"toolbox":{},"tooltip":{"show":true,"trigger":"axis"},"xAxis":[{"data":["Benchmark 1","Benchmark 2","Benchmark 3","Benchmark 4"]}],"yAxis":[{}]}
+    let goecharts_TKLzdWaEfOmY = echarts.init(document.getElementById('TKLzdWaEfOmY'), "white", { renderer: "canvas" });
+    let option_TKLzdWaEfOmY = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true},"series":[{"name":"ns/op","type":"line","data":[{"value":544.7},{"value":9766},{"value":619.1},{"value":3351}]},{"name":"B/op","type":"line","data":[{"value":0},{"value":21080},{"value":0},{"value":6139}]},{"name":"allocs/op","type":"line","data":[{"value":0},{"value":99},{"value":0},{"value":19}]}],"title":{"text":"Benchmark Results"},"toolbox":{},"tooltip":{"show":true,"trigger":"axis"},"xAxis":[{"data":["Benchmark 1","Benchmark 2","Benchmark 3","Benchmark 4"]}],"yAxis":[{}]}
 
-    goecharts_asGgqCmTOpgR.setOption(option_asGgqCmTOpgR);
+    goecharts_TKLzdWaEfOmY.setOption(option_TKLzdWaEfOmY);
 </script>
 <style>
     .container {margin-top:30px; display: flex;justify-content: center;align-items: center;}
